samples/_failures_safe/1761194605_aee4fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7189cf52.c: In function ‘primMST’:
./samples/SAFE/__tmp_7189cf52.c:131:12: error: missing terminating " character
  131 |     printf("
      |            ^
./samples/SAFE/__tmp_7189cf52.c:131:5: error: expected expression at end of input
  131 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_7189cf52.c:131:5: error: expected declaration or statement at end of input
